--- a/src/template.html
+++ b/src/template.html
@@ -6,5 +6,8 @@
     <title>Title</title>
   </head>
   <body>
+    <input type="text" name="location" id="location">
+    <button>Get Forecast</button>
+    <div id = "result"></div>
   </body>
 </html>
